# applications/auth/authController.js
@@ -4,23 +4,23 @@ const Joi = require("joi");
 
 let authController = {};
 
-// id가 존재하는지 & pwd가 올바른지 확인한 뒤, userId 반환 (두 조건 만족 x => undefined 반환)
-const getUserId = async (id, pwd) => {
+// id가 존재하는지 & pwd가 올바른지 확인
+const checkIdExist = async (id, pwd) => {
   return knex.select()
     .from("user")
-    .where({ userName: id })
+    .where({ userId: id })
     .then(user => {
       // 존재하는 id인지 확인
       if(Object.keys(user).length==0) {
         console.log("this id doesn't exist"); 
-        return undefined;
+        return 0;
       } 
       // pwd 맞는지 확인
       if(user[0].password !== pwd) {
         console.log("password is wrong"); 
-        return undefined;
+        return 0;
       }
-      return user[0].userId;
+      return 1;
     })
 }
 
@@ -36,7 +36,7 @@ const newIdChecker = async (id) => {
   return knex
     .select()
     .from("user")
-    .where({ userName: id })
+    .where({ userId: id })
     .then(result => {
       if(Object.keys(result).length===0)
         return 1;
@@ -45,38 +45,39 @@ const newIdChecker = async (id) => {
 }
 
 // 사용자 정보 디비에 저장
-const saveUserInfo = async (id, pwd) => {
+const saveUserInfo = async (id, nick, pwd) => {
   return knex("user")
-    .insert({ userName: id, password: pwd })
+    .insert({ userId: id, nickName: nick, password: pwd })
 }
 
 authController.register = async (req, res) => {
   // id는 3글자 이상, pwd는 5글자 이상 되도록 확인
   const schema = Joi.object().keys({
-    username: Joi.string().alphanum().min(3).required(),
+    userId: Joi.string().alphanum().min(3).required(),
+    nickName: Joi.string().required(),
     password: Joi.string().min(5).required(),
   });
 
   if(schema.validate(req.body.params).error)
     return res.status(401).end("아이디는 3자 이상, 비밀번호는 5자이상 입력해주십시오.");
   
-  const { username, password } = req.body.params;
+  const { userId, nickName, password } = req.body.params;
 
   // 존재하는 id인지 확인
-  const isNewId = await newIdChecker(username);
+  const isNewId = await newIdChecker(userId);
   if(!isNewId) return res.status(401).end("이미 존재하는 아이디입니다.");
   
   // db에 저장
-  await saveUserInfo(username, password);
+  await saveUserInfo(userId, nickName, password);
 
   return res.end("회원가입 되었습니다.");
 };
 
 authController.login = async (req, res) => {
-  const { username, password } = req.body.params;
+  const { userId, password } = req.body.params;
   
   // id, pwd 모두 입력했는지 확인
-  if (!username) { 
+  if (!userId) { 
     console.log("please enter your ID"); 
     return res.status(401).end("아이디를 입력해주세요.");
   }
@@ -86,8 +87,8 @@ authController.login = async (req, res) => {
   }
 
   // id, pwd 제대로 입력했는지 확인
-  const userId = await getUserId(username, password);
-  if (userId === undefined)
+  const checkExistence = await checkIdExist(userId, password);
+  if (!checkExistence)
     return res.status(401).end("가입하지 않은 아이디이거나, 잘못된 비밀번호입니다.");
   
   // jwt token 생성해서 쿠키로 전송
